Replace ProgressDialog with ProgressBar

--- a/app/src/main/res/layout/activity_create_account.xml
+++ b/app/src/main/res/layout/activity_create_account.xml
@@ -142,4 +142,16 @@
         android:background="?android:windowBackground"
         android:orientation="vertical"
         android:visibility="gone" />
+
+    <ProgressBar
+        android:id="@+id/view_progress_bar"
+        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:indeterminate="true"
+        android:indeterminateTint="?attr/colorAccent"
+        android:progressBackgroundTint="@color/accent30"
+        android:visibility="gone"
+        android:layout_marginTop="-6dp"
+        tools:visibility="visible" />
 </FrameLayout>
