View design review incorporated

--- a/app/src/main/res/layout/view_page_header.xml
+++ b/app/src/main/res/layout/view_page_header.xml
@@ -33,14 +33,12 @@
 
         <LinearLayout
             android:id="@+id/call_to_action_container"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
             android:layout_gravity="bottom"
-            android:layout_marginStart="4dp"
-            android:layout_marginBottom="12dp"
             android:background="?attr/selectableItemBackground"
             android:gravity="center_vertical"
-            android:padding="8dp"
+            android:paddingStart="12dp"
             android:visibility="gone">
 
             <ImageView
