Revert "Merge branch 'mobile-html-article-interaction'"
This reverts commit 64b1c530539a5a39cadbca3fa0acca7707705db9, reversing
changes made to 4106d9da8cb21dfb822920e8a7b8418cf925e5d1.

--- a/app/src/main/res/layout/activity_page.xml
+++ b/app/src/main/res/layout/activity_page.xml
@@ -49,7 +49,7 @@
                     android:id="@+id/page_toolbar_button_tabs"
                     android:layout_width="48dp"
                     android:layout_height="match_parent"
-                    android:contentDescription="@string/menu_page_show_tabs" />
+                    android:contentDescription="@string/menu_page_show_tabs"></org.wikipedia.views.TabCountsView>
 
                 <androidx.appcompat.widget.AppCompatImageView
                     android:id="@+id/page_toolbar_button_show_overflow_menu"
