--- a/app/src/main/res/layout/activity_reset_password.xml
+++ b/app/src/main/res/layout/activity_reset_password.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
     android:background="?attr/paper_color">
 
     <ScrollView
@@ -96,4 +97,17 @@
         android:background="?android:windowBackground"
         android:orientation="vertical"
         android:visibility="gone" />
+
+    <ProgressBar
+        android:id="@+id/view_progress_bar"
+        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:indeterminate="true"
+        android:indeterminateTint="?attr/colorAccent"
+        android:progressBackgroundTint="@color/accent30"
+        android:visibility="gone"
+        android:layout_marginTop="-6dp"
+        tools:visibility="visible" />
+
 </FrameLayout>
