--- a/app/src/main/res/values/styles_light.xml
+++ b/app/src/main/res/values/styles_light.xml
@@ -75,6 +75,7 @@
         <item name="tab_placeholder_text_color">@color/base80</item>
         <item name="chip_background_color">@color/base80</item>
         <item name="chip_text_color">@color/base20</item>
+        <item name="color_group_52">@color/accent75</item>
 
         <!-- Background for cards, lists, and controls -->
         <item name="paper_color">@color/base100</item>
