--- a/app/src/main/res/layout/activity_gallery.xml
+++ b/app/src/main/res/layout/activity_gallery.xml
@@ -67,7 +67,7 @@
             android:layout_height="80dp" />
 
         <LinearLayout
-            android:id="@+id/edit_container"
+            android:id="@+id/gallery_description_container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingStart="@dimen/activity_horizontal_margin"
