Update page indicator and views focusable settings

--- a/app/src/main/res/layout/view_onboarding_page.xml
+++ b/app/src/main/res/layout/view_onboarding_page.xml
@@ -49,6 +49,7 @@
                     android:fontFamily="sans-serif-medium"
                     android:textColor="?attr/material_theme_primary_color"
                     android:textSize="24sp"
+                    android:focusableInTouchMode="true"
                     tools:text="Lorem ipsum" />
 
                 <org.wikipedia.views.AppTextView
