--- a/app/src/main/res/layout/fragment_onboarding_pager.xml
+++ b/app/src/main/res/layout/fragment_onboarding_pager.xml
@@ -7,10 +7,10 @@
     android:background="?attr/paper_color"
     android:orientation="vertical">
 
-    <com.duolingo.open.rtlviewpager.RtlViewPager xmlns:android="http://schemas.android.com/apk/res/android"
+    <com.duolingo.open.rtlviewpager.RtlViewPager
         android:id="@+id/fragment_pager"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -41,6 +41,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
+                android:focusable="true"
                 app:piv_radius="4dp"
                 app:piv_rtl_mode="auto"
                 app:piv_selectedColor="?attr/colorAccent"
