--- a/app/src/main/res/values/strings_no_translate.xml
+++ b/app/src/main/res/values/strings_no_translate.xml
@@ -88,6 +88,7 @@
                                             theme: pagelib.c1.Themes.%s,
                                             dimImages: %b ,
                                             areTablesInitiallyExpanded: %b ,
+                                            textSizeAdjustmentPercentage: \'100%%\',
                                             loadImages: %b
 })</string>
 
