Update transparent button style and update TextView to Button

--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -130,7 +130,7 @@
                 android:textColor="?attr/material_theme_secondary_color"
                 android:textIsSelectable="true" />
 
-            <TextView
+            <Button
                 android:id="@+id/send_feedback_text"
                 style="@style/TransparentButton"
                 android:layout_width="wrap_content"
