--- a/app/src/main/res/layout/inflate_create_account_onboarding.xml
+++ b/app/src/main/res/layout/inflate_create_account_onboarding.xml
@@ -94,7 +94,7 @@
         android:text="@string/create_account_already_have"
         android:textColor="?attr/material_theme_primary_color" />
 
-    <TextView
+    <Button
         android:id="@+id/create_account_login_button"
         style="@style/TransparentButton"
         android:layout_width="wrap_content"
