--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -29,7 +29,7 @@
                     android:text="@string/login_dont_have_account"
                     android:textColor="?attr/material_theme_primary_color" />
 
-                <TextView
+                <Button
                     android:id="@+id/login_create_account_button"
                     style="@style/TransparentButton"
                     android:layout_width="wrap_content"
