--- a/app/src/main/res/layout/fragment_onboarding_pager.xml
+++ b/app/src/main/res/layout/fragment_onboarding_pager.xml
@@ -27,7 +27,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <TextView
+            <Button
                 android:id="@+id/fragment_onboarding_skip_button"
                 style="@style/TransparentButton"
                 android:layout_width="wrap_content"
@@ -64,7 +64,7 @@
                     android:tint="?attr/colorAccent"
                     app:srcCompat="@drawable/ic_chevron_forward_white_24dp" />
 
-                <TextView
+                <Button
                     android:id="@+id/fragment_onboarding_done_button"
                     style="@style/TransparentButton"
                     android:layout_width="wrap_content"
