--- a/app/src/main/res/layout/item_edit_actionbar_button.xml
+++ b/app/src/main/res/layout/item_edit_actionbar_button.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"
+<Button xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/edit_actionbar_button_text"
     style="@style/TransparentButton"
