--- a/app/src/main/res/layout/view_language_scroll.xml
+++ b/app/src/main/res/layout/view_language_scroll.xml
@@ -38,7 +38,7 @@
         app:layout_constraintEnd_toStartOf="@id/more_languages"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
+    <Button
         android:id="@+id/more_languages"
         style="@style/TransparentButton"
         android:layout_width="wrap_content"
