--- a/app/src/main/res/layout/view_link_preview_overlay.xml
+++ b/app/src/main/res/layout/view_link_preview_overlay.xml
@@ -14,7 +14,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <TextView
+        <Button
             android:id="@+id/link_preview_tertiary_button"
             style="@style/TransparentButton"
             android:layout_width="0dp"
@@ -29,7 +29,7 @@
             android:text="@string/button_get_directions"
             android:textColor="@color/base30" />
 
-        <TextView
+        <Button
             android:id="@+id/link_preview_secondary_button"
             style="@style/TransparentButton"
             android:layout_width="0dp"
@@ -45,7 +45,7 @@
             android:text="@string/menu_long_press_open_in_new_tab"
             android:textColor="?attr/colorAccent" />
 
-        <TextView
+        <Button
             android:id="@+id/link_preview_primary_button"
             style="@style/TransparentButton"
             android:layout_width="0dp"
