--- a/app/src/main/res/layout/view_main_drawer.xml
+++ b/app/src/main/res/layout/view_main_drawer.xml
@@ -57,7 +57,7 @@
             app:layout_constraintTop_toTopOf="@+id/main_drawer_account_avatar_container"
             tools:text="Sample account name" />
 
-        <TextView
+        <Button
             android:id="@+id/main_drawer_login_button"
             style="@style/TransparentButton"
             android:layout_width="wrap_content"
