--- a/app/src/main/res/layout/view_onboarding.xml
+++ b/app/src/main/res/layout/view_onboarding.xml
@@ -41,7 +41,7 @@
         android:paddingStart="12dp"
         android:paddingEnd="12dp">
 
-        <TextView
+        <Button
             android:id="@+id/view_onboarding_action_negative"
             style="@style/TransparentButton"
             android:layout_width="wrap_content"
@@ -50,7 +50,7 @@
             android:text="@string/onboarding_negative_action"
             android:textColor="@android:color/white" />
 
-        <TextView
+        <Button
             android:id="@+id/view_onboarding_action_positive"
             style="@style/App.Button.White"
             android:textColor="@color/accent50"
