--- a/app/src/main/res/layout/group_captcha.xml
+++ b/app/src/main/res/layout/group_captcha.xml
@@ -85,7 +85,7 @@
             android:maxLines="1" />
     </com.google.android.material.textfield.TextInputLayout>
 
-    <TextView
+    <Button
         android:id="@+id/captcha_submit_button"
         style="@style/App.Button.Blue"
         android:layout_width="match_parent"
