--- a/app/src/main/res/layout/include_add_to_reading_list_onboarding.xml
+++ b/app/src/main/res/layout/include_add_to_reading_list_onboarding.xml
@@ -134,7 +134,7 @@
 
     </LinearLayout>
 
-    <TextView
+    <Button
         android:id="@+id/onboarding_button"
         style="@style/App.Button.Blue"
         android:layout_gravity="end"
