--- a/app/src/main/res/layout/view_wiki_error.xml
+++ b/app/src/main/res/layout/view_wiki_error.xml
@@ -50,7 +50,7 @@
                     android:textColor="@color/base30"
                     android:textSize="16sp" />
 
-                <TextView
+                <Button
                     android:id="@+id/view_wiki_error_button"
                     style="@style/App.Button.White"
                     android:layout_margin="16dp"
