--- a/app/src/main/res/layout/activity_notifications.xml
+++ b/app/src/main/res/layout/activity_notifications.xml
@@ -40,7 +40,7 @@
                 android:layout_marginBottom="8dp"
                 android:text="@string/notifications_empty_message" />
 
-            <TextView
+            <Button
                 android:id="@+id/notifications_view_archived_button"
                 style="@style/App.Button.White"
                 android:text="@string/notifications_view_archived_button_text" />
