--- a/app/src/main/res/layout/include_crash_report.xml
+++ b/app/src/main/res/layout/include_crash_report.xml
@@ -22,12 +22,12 @@
         android:layout_height="0dp"
         android:layout_weight="1" />
 
-    <TextView
+    <Button
         android:id="@+id/crash_report_start_over"
         style="@style/App.Button.Blue"
         android:text="@string/crash_report_relaunch" />
 
-    <TextView
+    <Button
         android:id="@+id/crash_report_quit"
         style="@style/App.Button.Gray"
         android:text="@string/crash_report_quit" />
