Update transparent button click ripple animation and update theme chooser.

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -285,6 +285,7 @@
     <style name="TransparentButton" parent="@style/Widget.AppCompat.Button.Borderless">
         <item name="android:textAlignment">center</item>
         <item name="android:backgroundTint">@android:color/transparent</item>
+        <item name="android:foreground">?android:selectableItemBackground</item>
     </style>
 
     <style name="OnboardingSwitch">
