--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -108,4 +108,7 @@
     <!-- Divider width -->
     <dimen name="divider_width_for_article">60dp</dimen>
 
+    <!-- Theme Chooser width -->
+    <dimen name="theme_chooser_button_text_size">12sp</dimen>
+
 </resources>
