--- a/app/src/main/res/layout/dialog_theme_chooser.xml
+++ b/app/src/main/res/layout/dialog_theme_chooser.xml
@@ -111,13 +111,12 @@
             android:textColor="?attr/section_title_color" />
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="300dp"
             android:layout_height="56dp"
             android:layout_gravity="center_horizontal"
             android:layout_marginStart="-4dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="-4dp"
-            android:layout_marginBottom="16dp"
             android:clipChildren="false">
 
             <FrameLayout
@@ -170,6 +169,16 @@
                     android:elevation="4dp" />
 
             </FrameLayout>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="300dp"
+            android:layout_height="56dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginStart="-4dp"
+            android:layout_marginEnd="-4dp"
+            android:layout_marginBottom="16dp"
+            android:clipChildren="false">
 
             <FrameLayout
                 android:layout_width="0dp"
