--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -43,6 +43,7 @@
     <dimen name="bottomSheetMaxWidth">480dp</dimen>
     <!-- Default height with which bottom sheets peek out from the bottom -->
     <dimen name="bottomSheetPeekHeight">320dp</dimen>
+    <dimen name="themeChooserSheetPeekHeight">360dp</dimen>
     <dimen name="readingListSheetPeekHeight">360dp</dimen>
     <dimen name="imagePreviewSheetPeekHeight">280dp</dimen>
     <!-- Default size of images in Link Preview thumbnail gallery -->
