--- a/app/src/main/res/layout/view_search_bar.xml
+++ b/app/src/main/res/layout/view_search_bar.xml
@@ -28,7 +28,7 @@
         android:layout_height="48dp"
         android:background="?attr/selectableItemBackground"
         android:clickable="true"
-        android:contentDescription="@string/search_hint"
+        android:contentDescription="@string/search_hint_voice_search"
         android:scaleType="center"
         app:srcCompat="@drawable/ic_mic_black_24dp"
         app:tint="?attr/material_theme_secondary_color" />
