--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -22,6 +22,46 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" />
 
+            <androidx.cardview.widget.CardView
+                android:id="@+id/floating_queue_view"
+                android:layout_width="match_parent"
+                android:layout_height="80dp"
+                android:layout_gravity="bottom"
+                android:layout_margin="6dp"
+                app:cardCornerRadius="2dp"
+                app:cardElevation="10dp">
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:id="@+id/tooltip_container"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="?attr/paper_color">
+
+                    <TextView
+                        android:id="@+id/tooltip_text"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/main_tooltip_text"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintEnd_toStartOf="@id/tooltip_action_button"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintBottom_toBottomOf="parent"/>
+
+                    <Button
+                        android:id="@+id/tooltip_action_button"
+                        style="@style/TransparentButton"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/main_tooltip_action_button"
+                        android:textColor="?attr/colorAccent"
+                        app:layout_constraintStart_toEndOf="@id/tooltip_text"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintBottom_toBottomOf="parent" />
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+            </androidx.cardview.widget.CardView>
+
         </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
         <org.wikipedia.navtab.NavTabLayout
