--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -109,4 +109,7 @@
     <!-- Divider width -->
     <dimen name="divider_width_for_article">60dp</dimen>
 
+    <!-- Snackbar -->
+    <dimen name="snackbar_action_inline_max_dimen">128dp</dimen>
+
 </resources>
